<resources>
    <string name="app_name">Christian Community</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_publication_title">Publication</string>
    <string name="username_textView">Username</string>
    <string name="username_hint">Enter your username</string>
    <string name="password_textview">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="login_button">Login</string>
    <string name="image_perfil_description">This is perfil image</string>
    <string name="icon_like">Icon Like</string>
    <string name="hint_tittle_npublication">Title</string>
    <string name="hint_description_npublication">Description</string>
    <string name="button_cancel">cancelar</string>
    <string name="button_save">Aceptar</string>
    <string name="hint_date">Date</string>
    <string name="icon_new_publication">Icon new publication</string>
    <string name="date_example">10-12-2016</string>
    <string name="edit_text_new_publication">New Publication</string>
    <string name="edit_text_sign_in">Sign In</string>
    <string name="edit_text_comment">Comment</string>
    <string name="hint_place">Place</string>
    <string name="menu_item_logout">Logout</string>
    <string name="hint_password_npublication">Password</string>
    <string name="content_image_login">Login image</string>
    <string name="login">Login</string>
    <string name="text_password">Password</string>
    <string name="text_username">Username</string>
    <string name="text_forgot_the_password">Forgot the password</string>
    <string name="text_sign_in">Sign in</string>
    <string name="image_login">Login</string>
    <string name="text_like">Like</string>
    <string name="text_comment">Comment</string>
    <string name="christian">Christian</string>
    <string name="communities">Communities</string>
    <string name="loading_user">Logging in</string>
    <string name="loggin_invalid">Username and Password invalid. Try again please.</string>
    <string name="publication_not_created">The publication was not created, try again please.</string>
    <string name="publication_created">The publication was created successfully.</string>
    <string name="publication_tab_name">PUBLICATION</string>
    <string name="achievement_tab_name">ACHIEVEMENT</string>

    <string name="service_url">https://ccommunitiesservice-dev.herokuapp.com/</string>

    <string name="username_sign_in">Username</string>
    <string name="password_sign_in">Password</string>
    <string name="name_sign_in">Name</string>
    <string name="last_name_sign_in">Last name</string>
    <string name="email_sign_in">Email</string>
    <string name="icon_comment">Icon comment</string>
    <string name="text_image_user_comment">Image user comment</string>
    <string name="text_image_achievement">Image achievement</string>
    <string name="icon_send_context">Icon Send</string>
    <string name="text_write_your_comment">Write your comment</string>
    <string name="text_count_like">Like</string>
    <string name="text_count_comment">Comment</string>
    <string name="underscore_like_comment">-</string>
    <string name="comment_error">There was a problem creating the comment</string>
    <string name="comment_success">Your comment was posted.</string>
    <string name="date_format">yyyy-MM-dd</string>

    <string name="user_created">Welcome.</string>
    <string name="user_not_created">The user was not created, try again please.</string>
    <string name="no_publications">There is no publications yet.</string>
    <string name="no_achievements">You do not have any achievement yet.</string>
</resources>
