<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="6dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:id="@+id/card_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_user"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:contentDescription="@string/image_perfil_description"
            app:civ_border_color="#c0b3bd"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/name_user_publication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/image_user"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:text="Nicaela Onofre Rocha"/>
        <TextView
            android:id="@+id/title_publication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_user_publication"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/image_user"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date_publication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/title_publication"
            android:layout_below="@+id/title_publication"

            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/description_publication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/image_user"
            android:layout_below="@+id/image_user"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <RelativeLayout
            android:id="@+id/social_icons_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/card_bottom">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/count_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="1"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/label_count_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/text_count_like"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/underscore_like_comment"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/count_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="2"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/label_count_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/text_count_comment"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>

            <TextView
                android:id="@+id/label_see_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:paddingBottom="5dp"
                android:text="@string/see_more"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/link"
                android:visibility="invisible" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/card_bottom"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:background="#f2f0f0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/like_publication"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="4dp"
                        android:contentDescription="@string/icon_like"
                        android:src="@mipmap/icon_happy_face" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="11dp"
                        android:text="@string/text_like"
                        android:textColor="#666666" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/id_comment_layout"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:clickable="true"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/like_comment"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="4dp"
                        android:contentDescription="@string/icon_comment"
                        android:src="@mipmap/icon_comment" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/text_comment"
                        android:textColor="#666666" />
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>