<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_degrade"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ccomunities.alashka.com.ccommunities_dev.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/MyMaterialTheme">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_sign_in"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="horizontal"
            android:layout_gravity="center"

            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/photo_default"
                android:adjustViewBounds="true"
                android:maxWidth="150dp"
                android:maxHeight="80dp"
                android:contentDescription="@string/image_login"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_sign_in"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end|bottom"
                app:backgroundTint="@android:color/white"
                app:fabSize="mini"
                app:srcCompat="@mipmap/icon_photo_edit_grey"
                android:theme="@style/MyEditText"/>


        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/label_username_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textColorHint="#ffffff"
            app:hintTextAppearance="@style/MyHintText">

            <EditText
                android:id="@+id/edit_text_username_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/username_sign_in"
                android:inputType="text"
                android:textColorHint="#ffffff"
                android:textColor="@color/colorTextIcons"
                android:singleLine="true"
                android:theme="@style/MyEditText"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/label_password_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textColorHint="#ffffff"
            app:hintTextAppearance="@style/MyHintText">

            <EditText
                android:id="@+id/edit_text_password_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_sign_in"
                android:textColorHint="#ffffff"
                android:textColor="@color/colorTextIcons"
                android:inputType="textPassword"
                android:singleLine="true"
                android:theme="@style/MyEditText"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/label_name_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textColorHint="#ffffff"
            app:hintTextAppearance="@style/MyHintText">

            <EditText
                android:id="@+id/edit_text_name_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name_sign_in"
                android:textColorHint="#ffffff"
                android:textColor="@color/colorTextIcons"
                android:inputType="text"
                android:singleLine="true"
                android:theme="@style/MyEditText"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/label_last_name_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textColorHint="#ffffff"
            app:hintTextAppearance="@style/MyHintText">

            <EditText
                android:id="@+id/edit_text_last_name_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/last_name_sign_in"
                android:textColorHint="#ffffff"
                android:textColor="@color/colorTextIcons"
                android:inputType="text"
                android:singleLine="true"
                android:theme="@style/MyEditText"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/label_email_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textColorHint="#ffffff"
            app:hintTextAppearance="@style/MyHintText">

            <EditText
                android:id="@+id/edit_email_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email_sign_in"
                android:textColorHint="#ffffff"
                android:textColor="@color/colorTextIcons"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:theme="@style/MyEditText"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/b_button"
            android:onClick="createUser"
            android:text="@string/text_sign_in"
            android:textColor="#b399ad"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:fontFamily="sans-serif-light"
            android:textAllCaps="false"
            />

    </LinearLayout>

</LinearLayout>
