<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="ccomunities.alashka.com.ccommunities_dev.NewPublicationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.design.widget.AppBarLayout
            android:id="@+id/bar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/MyMaterialTheme">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_new_publication"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_below="@+id/bar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="25dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="32dp"
            android:background="@drawable/login_degrade"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"

            android:layout_alignParentStart="true">

            <LinearLayout
                android:id="@+id/area_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_view_tittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/icon_new_publication"
                    android:src="@mipmap/icon_write" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/label_title_npublication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColorHint="#ffffff"
                    app:hintTextAppearance="@style/MyHintText">

                    <EditText
                        android:id="@+id/edit_text_tittle_npublication"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_tittle_npublication"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColorHint="#ffffff"
                        android:textColor="@color/colorTextIcons"
                        android:theme="@style/MyEditText"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/area_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/area_title"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/icon_new_publication"
                    android:src="@mipmap/icon_write" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/label_description_npublication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColorHint="#ffffff"
                    app:hintTextAppearance="@style/MyHintText">

                    <EditText
                        android:id="@+id/edit_text_description_npublication"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_description_npublication"
                        android:inputType="textMultiLine"
                        android:textColorHint="#ffffff"
                        android:textColor="@color/colorTextIcons"
                        android:theme="@style/MyEditText"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/area_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/area_description"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/icon_new_publication"
                    android:src="@mipmap/icon_calendar" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/label_date_npublication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColorHint="#ffffff"
                    app:hintTextAppearance="@style/MyHintText">

                    <EditText
                        android:id="@+id/edit_text_date_npublication"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_date"
                        android:inputType="date"
                        android:singleLine="true"
                        android:textColorHint="#ffffff"
                        android:textColor="@color/colorTextIcons"
                        android:theme="@style/MyEditText"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/area_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/area_date"
                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/img_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/icon_new_publication"
                    android:src="@mipmap/icon_map"
                    />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/label_place_npublication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:textColorHint="#ffffff"
                    app:hintTextAppearance="@style/MyHintText">

                    <EditText
                        android:id="@+id/edit_text_place_npublication"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_place"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColorHint="#ffffff"
                        android:textColor="@color/colorTextIcons"
                        android:theme="@style/MyEditText"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/button_save_publication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/bg_rounded"
                android:onClick="savePublication"
                android:text="@string/button_save"
                android:textColor="@color/colorTextIcons"
                />
        </RelativeLayout>

    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
